--- a/admin.html
+++ b/admin.html
@@ -107,6 +107,7 @@
                             <option value="" disabled selected>Selecciona la sede...</option>
                             <option value="Ospia">Ospia (Pago Mensual)</option>
                             <option value="Ferreyra">Ferreyra (Pago Diario)</option>
+                            <option value="Sanatorio Allende">Maternidad</option>
                         </select>
 
                         <label for="fecha-externa">Fecha del cobro/trabajo:</label>
@@ -216,3 +217,4 @@
     <script src="admin.js"></script>
 </body>
 </html>
+
